--- a/pickups.html
+++ b/pickups.html
@@ -339,7 +339,9 @@ Grant - Darnell Mooney/Brayden Narveson (10/24)<br>
 Grant - Keaton Mitchell/Stefon Diggs (10/30)<br>
 Mike - Mack Hollins/Rashee Rice (11/9)<br>
 Matthew - Audric Estime/Brandon Aiyuk (11/12)<br>
-Randy - Hunter Henry/Christian Kirk (11/17)
+Randy - Hunter Henry/Christian Kirk (11/17)<br>
+Matthew - Courtland Sutton/Dak Prescott (11/19)<br>
+John - Cedric Tillman/Harrison Butker (11/20)
 </td></tr>
 <tr><td width=50>9/10</td>
 <td width=600>
