--- a/roster.html
+++ b/roster.html
@@ -93,7 +93,6 @@
 <td valign=top>
 <table border=0 cellspacing=0 width=204>
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>Matthew (4)</b></font></td></tr>
-<tr><td>DAL</td><td>Dak Prescott           </td></tr>
 <tr><td> SF</td><td>Brock Purdy            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DET</td><td>Jahmyr Gibbs           </td></tr>
@@ -105,6 +104,7 @@
 <tr><td>MIA</td><td>Tyreek Hill            </td></tr>
 <tr><td>LAR</td><td>Cooper Kupp            </td></tr>
 <tr><td>HOU</td><td>Tank Dell              </td></tr>
+<tr><td>DEN</td><td>Courtland Sutton       </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>HOU</td><td>Dalton Schultz         </td></tr>
 <tr><td> GB</td><td>Tucker Kraft           </td></tr>
@@ -248,11 +248,11 @@
 <tr><td>BAL</td><td>Zay Flowers            </td></tr>
 <tr><td>WAS</td><td>Terry McLaurin         </td></tr>
 <tr><td>BAL</td><td>Diontae Johnson        </td></tr>
+<tr><td>CLE</td><td>Cedric Tillman         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BAL</td><td>Isaiah Likely          </td></tr>
 <tr><td> TB</td><td>Cade Otton             </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td> KC</td><td>Harrison Butker        </td></tr>
 <tr><td>PIT</td><td>Chris Boswell          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>WAS</td><td>Jayden Daniels         </td></tr>
