--- a/roster.html
+++ b/roster.html
@@ -217,13 +217,13 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>DET</td><td>Amon-Ra St Brown       </td></tr>
 <tr><td>MIN</td><td>Justin Jefferson       </td></tr>
-<tr><td> TB</td><td>Chris Godwin           </td></tr>
 <tr><td> GB</td><td>Christian Watson       </td></tr>
-<tr><td>CHI</td><td>Keenan Allen           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>ATL</td><td>Kyle Pitts             </td></tr>
+<tr><td>MIA</td><td>Jonnu Smith            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BUF</td><td>Tyler Bass             </td></tr>
+<tr><td>DEN</td><td>Wil Lutz               </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>ARI</td><td>Trey Benson            </td></tr>
 <tr><td>CAR</td><td>Jonathon Brooks        </td></tr>
