--- a/pickups.html
+++ b/pickups.html
@@ -203,8 +203,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Wil Lutz/Keenan Allen</td>
+<td width=50>11/21</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -341,7 +341,8 @@ Mike - Mack Hollins/Rashee Rice (11/9)<br>
 Matthew - Audric Estime/Brandon Aiyuk (11/12)<br>
 Randy - Hunter Henry/Christian Kirk (11/17)<br>
 Matthew - Courtland Sutton/Dak Prescott (11/19)<br>
-John - Cedric Tillman/Harrison Butker (11/20)
+John - Cedric Tillman/Harrison Butker (11/20)<br>
+Steven - Jonnu Smith/Chris Godwin (11/21)
 </td></tr>
 <tr><td width=50>9/10</td>
 <td width=600>
