--- a/roster.html
+++ b/roster.html
@@ -94,6 +94,7 @@
 <table border=0 cellspacing=0 width=204>
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>Matthew (4)</b></font></td></tr>
 <tr><td> SF</td><td>Brock Purdy            </td></tr>
+<tr><td> SF</td><td>Brandon Allen          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DET</td><td>Jahmyr Gibbs           </td></tr>
 <tr><td>DET</td><td>David Montgomery       </td></tr>
@@ -106,7 +107,6 @@
 <tr><td>HOU</td><td>Tank Dell              </td></tr>
 <tr><td>DEN</td><td>Courtland Sutton       </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>HOU</td><td>Dalton Schultz         </td></tr>
 <tr><td> GB</td><td>Tucker Kraft           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>SEA</td><td>Jason Myers            </td></tr>
