--- a/pickups.html
+++ b/pickups.html
@@ -359,4 +359,9 @@ Mike - Chase Brown, Zach Charbonnet
 Mike - Blake Corum<br>
 Steven - Zach Charbonnet
 </td></tr>
+<tr><td width=50>11/24</td>
+<td width=600>
+Roger - Dalton Kincaid<br>
+Grant - Mark Andrews
+</td></tr>
 </table>
