--- a/thousand.html
+++ b/thousand.html
@@ -1053,6 +1053,12 @@
     <td>1020</td>
     <td>Roger</td>
     <td>555</td></tr>
+<tr><td>2024</td>
+    <td>Week 12</td>
+    <td>Grant Mydland</td>
+    <td>1020</td>
+    <td>Sam</td>
+    <td>460</td></tr>
 <tr><td>1998</td>
     <td>Week 13</td>
     <td>Steve Butler</td>
