--- a/week13.html
+++ b/week13.html
@@ -36,14 +36,14 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Roger (2)</b></font></td></tr>
-<tr><td>Darnold</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Hunt</td>          <td></td><td align=right>0</td></tr>
+<tr><td>JAllen</td>        <td></td><td align=right>0</td></tr>
+<tr><td>JCook</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Pollard</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Lamb</td>          <td></td><td align=right>0</td></tr>
 <tr><td>ABrown</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Higgins</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Goedert</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Seibert</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Nabers</td>        <td></td><td align=right>0</td></tr>
+<tr><td>McLaughlin</td>    <td></td><td align=right>0</td></tr>
+<tr><td>RDavis</td>        <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
@@ -84,7 +84,7 @@
 <tr><td>Barkley</td>       <td></td><td align=right>0</td></tr>
 <tr><td>JTaylor</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Evans</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Pittman</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Mooney</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Andrews</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Fairbairn</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Worthy</td>        <td></td><td align=right>0</td></tr>
@@ -109,12 +109,12 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Randy (5)</b></font></td></tr>
-<tr><td>Herbert</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Burrow</td>        <td></td><td align=right>0</td></tr>
+<tr><td>BRobinson</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Achane</td>        <td></td><td align=right>0</td></tr>
-<tr><td>RWhite</td>        <td></td><td align=right>0</td></tr>
-<tr><td>DSamuel</td>       <td></td><td align=right>0</td></tr>
+<tr><td>JWilliams</td>     <td></td><td align=right>0</td></tr>
 <tr><td>McConkey</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
+<tr><td>LaPorta</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Dicker</td>        <td></td><td align=right>0</td></tr>
 <tr><td>MHarrison</td>     <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
@@ -141,7 +141,7 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>John (9)</b></font></td></tr>
 <tr><td>Murray</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
-<tr><td>BRobinson</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Irving</td>        <td></td><td align=right>0</td></tr>
 <tr><td>NCollins</td>      <td></td><td align=right>0</td></tr>
 <tr><td>McLaurin</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Otton</td>         <td></td><td align=right>0</td></tr>
