--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 <a href="week10.html"><b>10</b></a>
 <a href="week11.html"><b>11</b></a>
 <a href="week12.html"><b>12</b></a>
-<a href="week13.html"><b>13P</b></a><br>
+<a href="week13.html"><b>13</b></a>
+<a href="week14.html"><b>14P</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -71,44 +72,44 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Low</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
 <tr><td><font size=2>John(9)</font></td>
+    <td><font size=2>7</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>8175</font></td>
-    <td><font size=2>7605</font></td>
+    <td><font size=2>9015</font></td>
+    <td><font size=2>8265</font></td>
     <td><font size=2>885</font></td>
     <td><font size=2>375</font></td>
     <td><font size=2>3</font></td>
-<tr><td><font size=2>Sam(7)</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>7</font></td>
-    <td><font size=2>8150</font></td>
-    <td><font size=2>8895</font></td>
-    <td><font size=2>1135</font></td>
-    <td><font size=2>410</font></td>
-    <td><font size=2>1</font></td>
 <tr><td><font size=2>Randy(5)</font></td>
-    <td><font size=2>5</font></td>
+    <td><font size=2>6</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>7375</font></td>
-    <td><font size=2>7680</font></td>
+    <td><font size=2>8095</font></td>
+    <td><font size=2>8105</font></td>
     <td><font size=2>960</font></td>
     <td><font size=2>295</font></td>
     <td><font size=2>2</font></td>
-<tr><td><font size=2>Mike(3)</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>7</font></td>
-    <td><font size=2>6410</font></td>
-    <td><font size=2>6560</font></td>
-    <td><font size=2>750</font></td>
-    <td><font size=2>310</font></td>
-    <td><font size=2>0</font></td>
 <tr><td><font size=2>States(1)</font></td>
-    <td><font size=2>5</font></td>
+    <td><font size=2>6</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>5785</font></td>
-    <td><font size=2>6595</font></td>
+    <td><font size=2>6320</font></td>
+    <td><font size=2>6935</font></td>
     <td><font size=2>700</font></td>
     <td><font size=2>215</font></td>
+    <td><font size=2>0</font></td>
+<tr><td><font size=2>Sam(7)</font></td>
+    <td><font size=2>5</font></td>
+    <td><font size=2>8</font></td>
+    <td><font size=2>8810</font></td>
+    <td><font size=2>9735</font></td>
+    <td><font size=2>1135</font></td>
+    <td><font size=2>410</font></td>
+    <td><font size=2>1</font></td>
+<tr><td><font size=2>Mike(3)</font></td>
+    <td><font size=2>5</font></td>
+    <td><font size=2>8</font></td>
+    <td><font size=2>7175</font></td>
+    <td><font size=2>7400</font></td>
+    <td><font size=2>765</font></td>
+    <td><font size=2>310</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2></font></td>
     <td><font size=2></font></td>
@@ -119,42 +120,42 @@
     <td><font size=2></font></td>
     <td><font size=2></font></td></tr>
 <tr><td><font size=2>Grant(10)</font></td>
-    <td><font size=2>9</font></td>
+    <td><font size=2>10</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>8905</font></td>
-    <td><font size=2>7270</font></td>
+    <td><font size=2>9745</font></td>
+    <td><font size=2>8035</font></td>
     <td><font size=2>1245</font></td>
     <td><font size=2>410</font></td>
     <td><font size=2>4</font></td>
 <tr><td><font size=2>Roger(2)</font></td>
-    <td><font size=2>9</font></td>
+    <td><font size=2>10</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>8135</font></td>
-    <td><font size=2>6685</font></td>
-    <td><font size=2>895</font></td>
+    <td><font size=2>9065</font></td>
+    <td><font size=2>7130</font></td>
+    <td><font size=2>930</font></td>
     <td><font size=2>375</font></td>
-    <td><font size=2>1</font></td>
+    <td><font size=2>2</font></td>
 <tr><td><font size=2>Rich(6)</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>6550</font></td>
-    <td><font size=2>6845</font></td>
+    <td><font size=2>7</font></td>
+    <td><font size=2>6995</font></td>
+    <td><font size=2>7775</font></td>
     <td><font size=2>790</font></td>
     <td><font size=2>320</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Steven(8)</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>7</font></td>
-    <td><font size=2>7105</font></td>
-    <td><font size=2>7025</font></td>
+    <td><font size=2>8</font></td>
+    <td><font size=2>7445</font></td>
+    <td><font size=2>7560</font></td>
     <td><font size=2>805</font></td>
-    <td><font size=2>440</font></td>
+    <td><font size=2>340</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Matthew(4)</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>7</font></td>
-    <td><font size=2>6750</font></td>
-    <td><font size=2>8180</font></td>
+    <td><font size=2>8</font></td>
+    <td><font size=2>7175</font></td>
+    <td><font size=2>8900</font></td>
     <td><font size=2>1105</font></td>
     <td><font size=2>245</font></td>
     <td><font size=2>1</font></td>
