--- a/pickups.html
+++ b/pickups.html
@@ -286,8 +286,8 @@
 <tr>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Nick Westbrook-Ikhine/Diontae Johnson</td>
+<td width=50>12/3</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>3)</td>
