--- a/roster.html
+++ b/roster.html
@@ -247,8 +247,8 @@
 <tr><td>CHI</td><td>DJ Moore               </td></tr>
 <tr><td>BAL</td><td>Zay Flowers            </td></tr>
 <tr><td>WAS</td><td>Terry McLaurin         </td></tr>
-<tr><td>BAL</td><td>Diontae Johnson        </td></tr>
 <tr><td>CLE</td><td>Cedric Tillman         </td></tr>
+<tr><td>TEN</td><td>Nick Westbrook-Ikhine  </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BAL</td><td>Isaiah Likely          </td></tr>
 <tr><td> TB</td><td>Cade Otton             </td></tr>
