--- a/pickups.html
+++ b/pickups.html
@@ -364,4 +364,9 @@ Steven - Zach Charbonnet
 Roger - Dalton Kincaid<br>
 Grant - Mark Andrews
 </td></tr>
+<tr><td width=50>12/5</td>
+<td width=600>
+Roger - Alexander Mattison<br>
+Grant - Jason Sanders
+</td></tr>
 </table>
