--- a/pickups.html
+++ b/pickups.html
@@ -342,7 +342,9 @@ Matthew - Audric Estime/Brandon Aiyuk (11/12)<br>
 Randy - Hunter Henry/Christian Kirk (11/17)<br>
 Matthew - Courtland Sutton/Dak Prescott (11/19)<br>
 John - Cedric Tillman/Harrison Butker (11/20)<br>
-Steven - Jonnu Smith/Chris Godwin (11/21)
+Steven - Jonnu Smith/Chris Godwin (11/21)<br>
+States - Cooper Rush/Christian McCaffrey (12/7)<br>
+Roger - Pat Freiermuth/Dallas Goedert (12/7)
 </td></tr>
 <tr><td width=50>9/10</td>
 <td width=600>
