--- a/roster.html
+++ b/roster.html
@@ -9,8 +9,8 @@
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>States (1)</b></font></td></tr>
 <tr><td>IND</td><td>Anthony Richardson     </td></tr>
 <tr><td>IND</td><td>Joe Flacco             </td></tr>
+<tr><td>DAL</td><td>Cooper Rush            </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td> SF</td><td>Christian McCaffrey    </td></tr>
 <tr><td>JAX</td><td>Travis Etienne         </td></tr>
 <tr><td>MIN</td><td>Aaron Jones            </td></tr>
 <tr><td> LV</td><td>Zamir White            </td></tr>
@@ -49,8 +49,8 @@
 <tr><td>SEA</td><td>Tyler Lockett          </td></tr>
 <tr><td>NYJ</td><td>Garrett Wilson         </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>PHI</td><td>Dallas Goedert         </td></tr>
 <tr><td>BUF</td><td>Dalton Kincaid         </td></tr>
+<tr><td>PIT</td><td>Pat Freiermuth         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> TB</td><td>Chase McLaughlin       </td></tr>
 <tr><td>WAS</td><td>Austin Seibert         </td></tr>
