--- a/pickups.html
+++ b/pickups.html
@@ -344,7 +344,8 @@ Matthew - Courtland Sutton/Dak Prescott (11/19)<br>
 John - Cedric Tillman/Harrison Butker (11/20)<br>
 Steven - Jonnu Smith/Chris Godwin (11/21)<br>
 States - Cooper Rush/Christian McCaffrey (12/7)<br>
-Roger - Pat Freiermuth/Dallas Goedert (12/7)
+Roger - Pat Freiermuth/Dallas Goedert (12/7)<br>
+Rich - Dustin Hopkins/Roman Wilson (12/8)
 </td></tr>
 <tr><td width=50>9/10</td>
 <td width=600>
