--- a/roster.html
+++ b/roster.html
@@ -168,10 +168,10 @@
 <tr><td>CHI</td><td>Cole Kmet              </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BAL</td><td>Justin Tucker          </td></tr>
+<tr><td>CLE</td><td>Dustin Hopkins         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CHI</td><td>Rome Odunze            </td></tr>
 <tr><td>CAR</td><td>Xavier Legette         </td></tr>
-<tr><td>PIT</td><td>Roman Wilson           </td></tr>
 </table>
 </td>
 </tr>
