--- a/roster.html
+++ b/roster.html
@@ -128,12 +128,12 @@
 <tr><td>MIA</td><td>De'Von Achane          </td></tr>
 <tr><td> TB</td><td>Rachaad White          </td></tr>
 <tr><td>DAL</td><td>Rico Dowdle            </td></tr>
-<tr><td>MIN</td><td>Ty Chandler            </td></tr>
 <tr><td>JAX</td><td>Tank Bigsby            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> SF</td><td>Deebo Samuel           </td></tr>
 <tr><td>PHI</td><td>DeVonta Smith          </td></tr>
 <tr><td>DET</td><td>Jameson Williams       </td></tr>
+<tr><td>LAC</td><td>Quentin Johnston       </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DET</td><td>Sam LaPorta            </td></tr>
 <tr><td> NE</td><td>Hunter Henry           </td></tr>
