--- a/pickups.html
+++ b/pickups.html
@@ -345,7 +345,9 @@ John - Cedric Tillman/Harrison Butker (11/20)<br>
 Steven - Jonnu Smith/Chris Godwin (11/21)<br>
 States - Cooper Rush/Christian McCaffrey (12/7)<br>
 Roger - Pat Freiermuth/Dallas Goedert (12/7)<br>
-Rich - Dustin Hopkins/Roman Wilson (12/8)
+Rich - Dustin Hopkins/Roman Wilson (12/8)<br>
+States - Patrick Taylor/Jordan Mason (12/10)<br>
+Grant - Isaiah Davis/Austin Ekeler (12/11)
 </td></tr>
 <tr><td width=50>9/10</td>
 <td width=600>
