--- a/roster.html
+++ b/roster.html
@@ -14,8 +14,8 @@
 <tr><td>JAX</td><td>Travis Etienne         </td></tr>
 <tr><td>MIN</td><td>Aaron Jones            </td></tr>
 <tr><td> LV</td><td>Zamir White            </td></tr>
-<tr><td> SF</td><td>Jordan Mason           </td></tr>
 <tr><td>BAL</td><td>Justice Hill           </td></tr>
+<tr><td> SF</td><td>Patrick Taylor         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>SEA</td><td>DK Metcalf             </td></tr>
 <tr><td>ATL</td><td>Drake London           </td></tr>
@@ -271,7 +271,6 @@
 <tr><td>PHI</td><td>Saquon Barkley         </td></tr>
 <tr><td>IND</td><td>Jonathan Taylor        </td></tr>
 <tr><td>CHI</td><td>D'Andre Swift          </td></tr>
-<tr><td>WAS</td><td>Austin Ekeler          </td></tr>
 <tr><td>BAL</td><td>Keaton Mitchell        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> TB</td><td>Mike Evans             </td></tr>
@@ -288,6 +287,7 @@
 <tr><td> KC</td><td>Xavier Worthy          </td></tr>
 <tr><td>ATL</td><td>Michael Penix          </td></tr>
 <tr><td>PHI</td><td>Will Shipley           </td></tr>
+<tr><td>NYJ</td><td>Isaiah Davis           </td></tr>
 </table>
 </td>
 <td>
