--- a/pickups.html
+++ b/pickups.html
@@ -347,7 +347,8 @@ States - Cooper Rush/Christian McCaffrey (12/7)<br>
 Roger - Pat Freiermuth/Dallas Goedert (12/7)<br>
 Rich - Dustin Hopkins/Roman Wilson (12/8)<br>
 States - Patrick Taylor/Jordan Mason (12/10)<br>
-Grant - Isaiah Davis/Austin Ekeler (12/11)
+Grant - Isaiah Davis/Austin Ekeler (12/11)<br>
+States - Sincere McCormick/Zamir White (12/12)
 </td></tr>
 <tr><td width=50>9/10</td>
 <td width=600>
