--- a/roster.html
+++ b/roster.html
@@ -13,9 +13,9 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>JAX</td><td>Travis Etienne         </td></tr>
 <tr><td>MIN</td><td>Aaron Jones            </td></tr>
-<tr><td> LV</td><td>Zamir White            </td></tr>
 <tr><td>BAL</td><td>Justice Hill           </td></tr>
 <tr><td> SF</td><td>Patrick Taylor         </td></tr>
+<tr><td> LV</td><td>Sincere McCormick      </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>SEA</td><td>DK Metcalf             </td></tr>
 <tr><td>ATL</td><td>Drake London           </td></tr>
