--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 <a href="week12.html"><b>12</b></a>
 <a href="week13.html"><b>13</b></a>
 <a href="week14.html"><b>14</b></a>
-<a href="week15.html"><b>15P</b></a><br>
+<a href="week15.html"><b>15</b></a>
+<a href="week16.html"><b>16P</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -73,44 +74,44 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Low</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
 <tr><td><font size=2>John(9)</font></td>
+    <td><font size=2>8</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>7</font></td>
-    <td><font size=2>9450</font></td>
-    <td><font size=2>8865</font></td>
+    <td><font size=2>10065</font></td>
+    <td><font size=2>9350</font></td>
     <td><font size=2>885</font></td>
     <td><font size=2>375</font></td>
     <td><font size=2>3</font></td>
 <tr><td><font size=2>Randy(5)</font></td>
+    <td><font size=2>8</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>7</font></td>
-    <td><font size=2>8695</font></td>
-    <td><font size=2>8540</font></td>
+    <td><font size=2>9150</font></td>
+    <td><font size=2>8890</font></td>
     <td><font size=2>960</font></td>
     <td><font size=2>295</font></td>
     <td><font size=2>2</font></td>
 <tr><td><font size=2>Mike(3)</font></td>
-    <td><font size=2>6</font></td>
+    <td><font size=2>7</font></td>
     <td><font size=2>8</font></td>
-    <td><font size=2>7965</font></td>
-    <td><font size=2>8135</font></td>
+    <td><font size=2>8460</font></td>
+    <td><font size=2>8385</font></td>
     <td><font size=2>790</font></td>
     <td><font size=2>310</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>States(1)</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>8</font></td>
-    <td><font size=2>6795</font></td>
-    <td><font size=2>7470</font></td>
+    <td><font size=2>9</font></td>
+    <td><font size=2>7280</font></td>
+    <td><font size=2>8085</font></td>
     <td><font size=2>700</font></td>
     <td><font size=2>215</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Sam(7)</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>9</font></td>
-    <td><font size=2>9660</font></td>
-    <td><font size=2>10665</font></td>
+    <td><font size=2>10</font></td>
+    <td><font size=2>10010</font></td>
+    <td><font size=2>11120</font></td>
     <td><font size=2>1135</font></td>
-    <td><font size=2>410</font></td>
+    <td><font size=2>350</font></td>
     <td><font size=2>1</font></td>
 <tr><td><font size=2></font></td>
     <td><font size=2></font></td>
@@ -122,41 +123,41 @@
     <td><font size=2></font></td></tr>
 <tr><td><font size=2>Grant(10)</font></td>
     <td><font size=2>11</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>10280</font></td>
-    <td><font size=2>8510</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>11410</font></td>
+    <td><font size=2>9695</font></td>
     <td><font size=2>1245</font></td>
     <td><font size=2>410</font></td>
     <td><font size=2>4</font></td>
 <tr><td><font size=2>Roger(2)</font></td>
-    <td><font size=2>10</font></td>
+    <td><font size=2>11</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>9800</font></td>
-    <td><font size=2>7920</font></td>
-    <td><font size=2>930</font></td>
+    <td><font size=2>10985</font></td>
+    <td><font size=2>9050</font></td>
+    <td><font size=2>1185</font></td>
     <td><font size=2>375</font></td>
-    <td><font size=2>2</font></td>
-<tr><td><font size=2>Rich(6)</font></td>
-    <td><font size=2>7</font></td>
-    <td><font size=2>7</font></td>
-    <td><font size=2>7780</font></td>
-    <td><font size=2>8490</font></td>
-    <td><font size=2>790</font></td>
-    <td><font size=2>320</font></td>
-    <td><font size=2>0</font></td>
+    <td><font size=2>3</font></td>
 <tr><td><font size=2>Steven(8)</font></td>
-    <td><font size=2>6</font></td>
+    <td><font size=2>7</font></td>
     <td><font size=2>8</font></td>
-    <td><font size=2>8375</font></td>
-    <td><font size=2>8410</font></td>
-    <td><font size=2>930</font></td>
+    <td><font size=2>9350</font></td>
+    <td><font size=2>8945</font></td>
+    <td><font size=2>975</font></td>
     <td><font size=2>340</font></td>
     <td><font size=2>1</font></td>
+<tr><td><font size=2>Rich(6)</font></td>
+    <td><font size=2>7</font></td>
+    <td><font size=2>8</font></td>
+    <td><font size=2>8030</font></td>
+    <td><font size=2>8985</font></td>
+    <td><font size=2>790</font></td>
+    <td><font size=2>250</font></td>
+    <td><font size=2>0</font></td>
 <tr><td><font size=2>Matthew(4)</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>9</font></td>
-    <td><font size=2>7890</font></td>
-    <td><font size=2>9685</font></td>
+    <td><font size=2>10</font></td>
+    <td><font size=2>8425</font></td>
+    <td><font size=2>10660</font></td>
     <td><font size=2>1105</font></td>
     <td><font size=2>245</font></td>
     <td><font size=2>1</font></td>
