--- a/thousand.html
+++ b/thousand.html
@@ -273,6 +273,12 @@
     <td>1185</td>
     <td>-</td>
     <td>-</td></tr>
+<tr><td>2024</td>
+    <td>Week 15</td>
+    <td>Roger Bakos</td>
+    <td>1185</td>
+    <td>Grant</td>
+    <td>1130</td></tr>
 <tr><td>2002</td>
     <td>Week 17</td>
     <td>Steven Cohen</td>
@@ -477,6 +483,12 @@
     <td>1130</td>
     <td>Steven</td>
     <td>695</td></tr>
+<tr><td>2024</td>
+    <td>Week 15</td>
+    <td>Grant Mydland</td>
+    <td>1130</td>
+    <td>Roger</td>
+    <td>1185</td></tr>
 <tr><td>2001</td>
     <td>Week 7</td>
     <td>Mike Wieczorek</td>
