--- a/week15.html
+++ b/week15.html
@@ -7,58 +7,58 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>States (1)</b></font></td></tr>
-<tr><td>Richardson</td>    <td></td><td align=right>0</td></tr>
+<tr><td>Richardson</td>    <td></td><td align=right>150</td></tr>
 <tr><td>McCormick</td>     <td></td><td align=right>0</td></tr>
-<tr><td>AJones</td>        <td></td><td align=right>0</td></tr>
+<tr><td>AJones</td>        <td></td><td align=right>90</td></tr>
 <tr><td>Metcalf</td>       <td></td><td align=right>0</td></tr>
-<tr><td>London</td>        <td></td><td align=right>0</td></tr>
+<tr><td>London</td>        <td></td><td align=right>125</td></tr>
 <tr><td>Bowers</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Koo</td>           <td></td><td align=right>0</td></tr>
-<tr><td>Guerendo</td>      <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Koo</td>           <td></td><td align=right>95</td></tr>
+<tr><td>Guerendo</td>      <td></td><td align=right>25</td></tr>
+<tr><td></td>              <td></td><td align=right>485</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>John (9)</b></font></td></tr>
-<tr><td>Murray</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
-<tr><td>BRobinson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>NCollins</td>      <td></td><td align=right>0</td></tr>
-<tr><td>McLaurin</td>      <td></td><td align=right>0</td></tr>
+<tr><td>Murray</td>        <td></td><td align=right>30</td></tr>
+<tr><td>Henry</td>         <td></td><td align=right>30</td></tr>
+<tr><td>BRobinson</td>     <td></td><td align=right>30</td></tr>
+<tr><td>NCollins</td>      <td></td><td align=right>150</td></tr>
+<tr><td>McLaurin</td>      <td></td><td align=right>160</td></tr>
 <tr><td>Otton</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Boswell</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Daniels</td>       <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Boswell</td>       <td></td><td align=right>80</td></tr>
+<tr><td>Daniels</td>       <td></td><td align=right>135</td></tr>
+<tr><td></td>              <td></td><td align=right>615</td></tr>
 </table>
 </td>
 <td></td><td></td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Roger (2)</b></font></td></tr>
-<tr><td>JAllen</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Pollard</td>       <td></td><td align=right>0</td></tr>
-<tr><td>JCook</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Lamb</td>          <td></td><td align=right>0</td></tr>
-<tr><td>GWilson</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Freiermuth</td>    <td></td><td align=right>0</td></tr>
-<tr><td>McLaughlin</td>    <td></td><td align=right>0</td></tr>
-<tr><td>RDavis</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>JAllen</td>        <td></td><td align=right>245</td></tr>
+<tr><td>Pollard</td>       <td></td><td align=right>50</td></tr>
+<tr><td>JCook</td>         <td></td><td align=right>350</td></tr>
+<tr><td>Lamb</td>          <td></td><td align=right>130</td></tr>
+<tr><td>GWilson</td>       <td></td><td align=right>125</td></tr>
+<tr><td>Freiermuth</td>    <td></td><td align=right>75</td></tr>
+<tr><td>McLaughlin</td>    <td></td><td align=right>160</td></tr>
+<tr><td>RDavis</td>        <td></td><td align=right>50</td></tr>
+<tr><td></td>              <td></td><td align=right>1185</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Grant (10)</b></font></td></tr>
-<tr><td>LJackson</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Barkley</td>       <td></td><td align=right>0</td></tr>
-<tr><td>JTaylor</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Evans</td>         <td></td><td align=right>0</td></tr>
+<tr><td>LJackson</td>      <td></td><td align=right>450</td></tr>
+<tr><td>Barkley</td>       <td></td><td align=right>30</td></tr>
+<tr><td>JTaylor</td>       <td></td><td align=right>50</td></tr>
+<tr><td>Evans</td>         <td></td><td align=right>300</td></tr>
 <tr><td>Mooney</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Andrews</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Fairbairn</td>     <td></td><td align=right>0</td></tr>
-<tr><td>IDavis</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Andrews</td>       <td></td><td align=right>75</td></tr>
+<tr><td>Fairbairn</td>     <td></td><td align=right>75</td></tr>
+<tr><td>Worthy</td>        <td></td><td align=right>150</td></tr>
+<tr><td></td>              <td></td><td align=right>1130</td></tr>
 </table>
 </td>
 </tr>
@@ -67,28 +67,28 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Mike (3)</b></font></td></tr>
 <tr><td>Stafford</td>      <td></td><td align=right>0</td></tr>
-<tr><td>CBrown</td>        <td></td><td align=right>0</td></tr>
-<tr><td>KWilliams</td>     <td></td><td align=right>0</td></tr>
+<tr><td>CBrown</td>        <td></td><td align=right>170</td></tr>
+<tr><td>KWilliams</td>     <td></td><td align=right>50</td></tr>
 <tr><td>Reed</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Smith-Njigba</td>  <td></td><td align=right>0</td></tr>
-<tr><td>McBride</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Aubrey</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Coleman</td>       <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Smith-Njigba</td>  <td></td><td align=right>40</td></tr>
+<tr><td>McBride</td>       <td></td><td align=right>40</td></tr>
+<tr><td>Aubrey</td>        <td></td><td align=right>165</td></tr>
+<tr><td>Coleman</td>       <td></td><td align=right>30</td></tr>
+<tr><td></td>              <td></td><td align=right>495</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Rich (6)</b></font></td></tr>
-<tr><td>Mahomes</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Mahomes</td>       <td></td><td align=right>100</td></tr>
 <tr><td>Mixon</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Hubbard</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Nacua</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Shakir</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Kittle</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Tucker</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Nacua</td>         <td></td><td align=right>45</td></tr>
+<tr><td>Shakir</td>        <td></td><td align=right>50</td></tr>
+<tr><td>Kittle</td>        <td></td><td align=right>30</td></tr>
+<tr><td>Tucker</td>        <td></td><td align=right>25</td></tr>
 <tr><td>Odunze</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>250</td></tr>
 </table>
 </td>
 <td></td><td></td>
@@ -96,28 +96,28 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Matthew (4)</b></font></td></tr>
 <tr><td>Purdy</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Gibbs</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Gibbs</td>         <td></td><td align=right>165</td></tr>
 <tr><td>Montgomery</td>    <td></td><td align=right>0</td></tr>
-<tr><td>Sutton</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Sutton</td>        <td></td><td align=right>100</td></tr>
 <tr><td>Kupp</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Kraft</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Myers</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Nix</td>           <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Myers</td>         <td></td><td align=right>95</td></tr>
+<tr><td>Nix</td>           <td></td><td align=right>175</td></tr>
+<tr><td></td>              <td></td><td align=right>535</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Steven (8)</b></font></td></tr>
-<tr><td>Hurts</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Hurts</td>         <td></td><td align=right>145</td></tr>
 <tr><td>Walker</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Conner</td>        <td></td><td align=right>0</td></tr>
-<tr><td>St Brown</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Jefferson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>JSmith</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Bass</td>          <td></td><td align=right>0</td></tr>
-<tr><td>McMillan</td>      <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Conner</td>        <td></td><td align=right>155</td></tr>
+<tr><td>St Brown</td>      <td></td><td align=right>220</td></tr>
+<tr><td>Jefferson</td>     <td></td><td align=right>110</td></tr>
+<tr><td>JSmith</td>        <td></td><td align=right>75</td></tr>
+<tr><td>Bass</td>          <td></td><td align=right>135</td></tr>
+<tr><td>McMillan</td>      <td></td><td align=right>135</td></tr>
+<tr><td></td>              <td></td><td align=right>975</td></tr>
 </table>
 </td>
 </tr>
@@ -125,29 +125,29 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Randy (5)</b></font></td></tr>
-<tr><td>Burrow</td>        <td></td><td align=right>0</td></tr>
-<tr><td>BRobinson</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Burrow</td>        <td></td><td align=right>190</td></tr>
+<tr><td>BRobinson</td>     <td></td><td align=right>60</td></tr>
 <tr><td>Achane</td>        <td></td><td align=right>0</td></tr>
-<tr><td>JWilliams</td>     <td></td><td align=right>0</td></tr>
-<tr><td>McConkey</td>      <td></td><td align=right>0</td></tr>
+<tr><td>JWilliams</td>     <td></td><td align=right>50</td></tr>
+<tr><td>McConkey</td>      <td></td><td align=right>100</td></tr>
 <tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Dicker</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Dicker</td>        <td></td><td align=right>55</td></tr>
 <tr><td>MHarrison</td>     <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>455</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Sam (7)</b></font></td></tr>
-<tr><td>Tagovailoa</td>    <td></td><td align=right>0</td></tr>
-<tr><td>Jacobs</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Stevenson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Chase</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Tagovailoa</td>    <td></td><td align=right>50</td></tr>
+<tr><td>Jacobs</td>        <td></td><td align=right>95</td></tr>
+<tr><td>Stevenson</td>     <td></td><td align=right>30</td></tr>
+<tr><td>Chase</td>         <td></td><td align=right>45</td></tr>
 <tr><td>Jennings</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Kelce</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Bates</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Maye</td>          <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Bates</td>         <td></td><td align=right>30</td></tr>
+<tr><td>Maye</td>          <td></td><td align=right>100</td></tr>
+<tr><td></td>              <td></td><td align=right>350</td></tr>
 </table>
 <td></td><td></td>
 </td>
@@ -167,44 +167,44 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Low</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
 <tr><td><font size=2>John(9)</font></td>
+    <td><font size=2>8</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>7</font></td>
-    <td><font size=2>9450</font></td>
-    <td><font size=2>8865</font></td>
+    <td><font size=2>10065</font></td>
+    <td><font size=2>9350</font></td>
     <td><font size=2>885</font></td>
     <td><font size=2>375</font></td>
     <td><font size=2>3</font></td>
 <tr><td><font size=2>Randy(5)</font></td>
+    <td><font size=2>8</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>7</font></td>
-    <td><font size=2>8695</font></td>
-    <td><font size=2>8540</font></td>
+    <td><font size=2>9150</font></td>
+    <td><font size=2>8890</font></td>
     <td><font size=2>960</font></td>
     <td><font size=2>295</font></td>
     <td><font size=2>2</font></td>
 <tr><td><font size=2>Mike(3)</font></td>
-    <td><font size=2>6</font></td>
+    <td><font size=2>7</font></td>
     <td><font size=2>8</font></td>
-    <td><font size=2>7965</font></td>
-    <td><font size=2>8135</font></td>
+    <td><font size=2>8460</font></td>
+    <td><font size=2>8385</font></td>
     <td><font size=2>790</font></td>
     <td><font size=2>310</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>States(1)</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>8</font></td>
-    <td><font size=2>6795</font></td>
-    <td><font size=2>7470</font></td>
+    <td><font size=2>9</font></td>
+    <td><font size=2>7280</font></td>
+    <td><font size=2>8085</font></td>
     <td><font size=2>700</font></td>
     <td><font size=2>215</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Sam(7)</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>9</font></td>
-    <td><font size=2>9660</font></td>
-    <td><font size=2>10665</font></td>
+    <td><font size=2>10</font></td>
+    <td><font size=2>10010</font></td>
+    <td><font size=2>11120</font></td>
     <td><font size=2>1135</font></td>
-    <td><font size=2>410</font></td>
+    <td><font size=2>350</font></td>
     <td><font size=2>1</font></td>
 <tr><td><font size=2></font></td>
     <td><font size=2></font></td>
@@ -216,41 +216,41 @@
     <td><font size=2></font></td></tr>
 <tr><td><font size=2>Grant(10)</font></td>
     <td><font size=2>11</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>10280</font></td>
-    <td><font size=2>8510</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>11410</font></td>
+    <td><font size=2>9695</font></td>
     <td><font size=2>1245</font></td>
     <td><font size=2>410</font></td>
     <td><font size=2>4</font></td>
 <tr><td><font size=2>Roger(2)</font></td>
-    <td><font size=2>10</font></td>
+    <td><font size=2>11</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>9800</font></td>
-    <td><font size=2>7920</font></td>
-    <td><font size=2>930</font></td>
+    <td><font size=2>10985</font></td>
+    <td><font size=2>9050</font></td>
+    <td><font size=2>1185</font></td>
     <td><font size=2>375</font></td>
-    <td><font size=2>2</font></td>
-<tr><td><font size=2>Rich(6)</font></td>
-    <td><font size=2>7</font></td>
-    <td><font size=2>7</font></td>
-    <td><font size=2>7780</font></td>
-    <td><font size=2>8490</font></td>
-    <td><font size=2>790</font></td>
-    <td><font size=2>320</font></td>
-    <td><font size=2>0</font></td>
+    <td><font size=2>3</font></td>
 <tr><td><font size=2>Steven(8)</font></td>
-    <td><font size=2>6</font></td>
+    <td><font size=2>7</font></td>
     <td><font size=2>8</font></td>
-    <td><font size=2>8375</font></td>
-    <td><font size=2>8410</font></td>
-    <td><font size=2>930</font></td>
+    <td><font size=2>9350</font></td>
+    <td><font size=2>8945</font></td>
+    <td><font size=2>975</font></td>
     <td><font size=2>340</font></td>
     <td><font size=2>1</font></td>
+<tr><td><font size=2>Rich(6)</font></td>
+    <td><font size=2>7</font></td>
+    <td><font size=2>8</font></td>
+    <td><font size=2>8030</font></td>
+    <td><font size=2>8985</font></td>
+    <td><font size=2>790</font></td>
+    <td><font size=2>250</font></td>
+    <td><font size=2>0</font></td>
 <tr><td><font size=2>Matthew(4)</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>9</font></td>
-    <td><font size=2>7890</font></td>
-    <td><font size=2>9685</font></td>
+    <td><font size=2>10</font></td>
+    <td><font size=2>8425</font></td>
+    <td><font size=2>10660</font></td>
     <td><font size=2>1105</font></td>
     <td><font size=2>245</font></td>
     <td><font size=2>1</font></td>
