--- a/pickups.html
+++ b/pickups.html
@@ -298,8 +298,8 @@
 <tr>
 <td><table><tr>
 <td width=15>4)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Brenton Strange/Kirk Cousins</td>
+<td width=50>12/20</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>4)</td>
@@ -348,7 +348,8 @@ Roger - Pat Freiermuth/Dallas Goedert (12/7)<br>
 Rich - Dustin Hopkins/Roman Wilson (12/8)<br>
 States - Patrick Taylor/Jordan Mason (12/10)<br>
 Grant - Isaiah Davis/Austin Ekeler (12/11)<br>
-States - Sincere McCormick/Zamir White (12/12)
+States - Sincere McCormick/Zamir White (12/12)<br>
+Sam - Jerome Ford/Evan McPherson (12/17)
 </td></tr>
 <tr><td width=50>9/10</td>
 <td width=600>
