--- a/roster.html
+++ b/roster.html
@@ -187,6 +187,7 @@
 <tr><td> NE</td><td>Rhamondre Stevenson    </td></tr>
 <tr><td>CLE</td><td>Nick Chubb             </td></tr>
 <tr><td> GB</td><td>Emanuel Wilson         </td></tr>
+<tr><td>CLE</td><td>Jerome Ford            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CIN</td><td>Ja'Marr Chase          </td></tr>
 <tr><td>NYJ</td><td>Davante Adams          </td></tr>
@@ -196,7 +197,6 @@
 <tr><td> KC</td><td>Travis Kelce           </td></tr>
 <tr><td>MIN</td><td>TJ Hockenson           </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>CIN</td><td>Evan McPherson         </td></tr>
 <tr><td>DET</td><td>Jake Bates             </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> NE</td><td>Drake Maye             </td></tr>
@@ -236,7 +236,6 @@
 <table border=0 cellspacing=0 width=204>
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>John (9)</b></font></td></tr>
 <tr><td>ARI</td><td>Kyler Murray           </td></tr>
-<tr><td>ATL</td><td>Kirk Cousins           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BAL</td><td>Derrick Henry          </td></tr>
 <tr><td>MIA</td><td>Raheem Mostert         </td></tr>
@@ -252,6 +251,7 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>BAL</td><td>Isaiah Likely          </td></tr>
 <tr><td> TB</td><td>Cade Otton             </td></tr>
+<tr><td>JAX</td><td>Brenton Strange        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>PIT</td><td>Chris Boswell          </td></tr>
 <tr><td height=9></td><td></td></tr>
