--- a/roster.html
+++ b/roster.html
@@ -101,10 +101,10 @@
 <tr><td> NO</td><td>Alvin Kamara           </td></tr>
 <tr><td>LAC</td><td>Gus Edwards            </td></tr>
 <tr><td>LAC</td><td>JK Dobbins             </td></tr>
+<tr><td> NO</td><td>Kendre Miller          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>MIA</td><td>Tyreek Hill            </td></tr>
 <tr><td>LAR</td><td>Cooper Kupp            </td></tr>
-<tr><td>HOU</td><td>Tank Dell              </td></tr>
 <tr><td>DEN</td><td>Courtland Sutton       </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> GB</td><td>Tucker Kraft           </td></tr>
