--- a/pickups.html
+++ b/pickups.html
@@ -99,8 +99,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Kendre Miller/Tank Dell</td>
+<td width=50>12/22</td>
 </tr></table></td>
 </tr>
 <tr>
