--- a/thousand.html
+++ b/thousand.html
@@ -51,6 +51,12 @@
     <td>1420</td>
     <td>Roger</td>
     <td>285</td></tr>
+<tr><td>2024</td>
+    <td>Week 16</td>
+    <td>Grant Mydland</td>
+    <td>1405</td>
+    <td>Rich</td>
+    <td>700</td></tr>
 <tr><td>2021</td>
     <td>Week 1</td>
     <td>Matthew Edwards</td>
