--- a/roster.html
+++ b/roster.html
@@ -274,9 +274,9 @@
 <tr><td>BAL</td><td>Keaton Mitchell        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> TB</td><td>Mike Evans             </td></tr>
-<tr><td>IND</td><td>Michael Pittman        </td></tr>
 <tr><td> KC</td><td>DeAndre Hopkins        </td></tr>
 <tr><td>ATL</td><td>Darnell Mooney         </td></tr>
+<tr><td>MIN</td><td>Jordan Addison         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DAL</td><td>Jake Ferguson          </td></tr>
 <tr><td>BAL</td><td>Mark Andrews           </td></tr>
